- Added support for both flex and pixel coordinate UI layouts
- Added support for static, ninepatch and tiling UI element backgrounds
- Added multiple images to ImageButton to allow for images based on button state
- Added NodeStateListener to UiElement
- Added shadow, spacing, kerning and flip options to UiFont
- Added controller trigger button down/up notifications
- UI can now use controller triggers as hotkeys
- Improved UI theme JSON consistency
- Improved scrolling when dragging scroll thumb in ScrollBox
- Fixed hotkey based actions not triggering correct UI state
- Fixed TypingTextAnimation not resetting correctly
- Fixed UI elements changing state within margin area
- Fixed SlideIn/SlideOut visibility timing
- Fixed graphics context unnecessarily applying clip when clip is same size as viewport
- Seperated resize events from reset events in text animations

[1.7.14]
- (#76) Added support for Tiled object shapes
- (#77) Fixed fade transitions modifying the color instance

[1.7.13]
- Fixed out of bounds exception when switch between TabView and another navigation type

[1.7.12]
- Added IntTreeMap implementation
- Fixed incorrect clip caching between scrollbox and other elements
- Reduced UI render node + layer memory usage
- Reduced memory usage by switching to IntMap where appropriate

[1.7.11]
- Fixed Xbox360 controller left/right trigger detection on Windows
- Fixed incorrect Mac/Linux key bindings on Xbox360 controller
- Fixed UiUtils#setUpControllerInput not initializing PS4 controller correctly
- Fixed TiledMapLoader crashing when loading cached Tiled layers asynchronously
- [BREAKING] Removed PS3 controller support due to inconsistent support across platforms

[1.7.10]
- Significantly reduce memory usage of XML and JSON serializers

[1.7.9]
- [BREAKING] mini2Dx artemis systems moved from package com.artemis.system to com.artemis to provide access to artemis-odb scopes
- Fix interpolation and rendering systems not checking disabled flag