@@ -118,6 +118,22 @@ public class TextBox extends UiElement implements Actionable, FlexUiElement {
 	}
 
 	@Override
+	public void invokeBeginHover() {
+		if(renderNode == null) {
+			return;
+		}
+		renderNode.beginFakeHover();
+	}
+
+	@Override
+	public void invokeEndHover() {
+		if(renderNode == null) {
+			return;
+		}
+		renderNode.endFakeHover();
+	}
+
+	@Override
 	public void setVisibility(Visibility visibility) {
 		if (this.visibility == visibility) {
 			return;
