@@ -56,6 +56,22 @@ public class DummyUiElement extends UiElement {
 	}
 
 	@Override
+	public void invokeBeginHover() {
+		if(renderNode == null) {
+			return;
+		}
+		renderNode.beginFakeHover();
+	}
+
+	@Override
+	public void invokeEndHover() {
+		if(renderNode == null) {
+			return;
+		}
+		renderNode.endFakeHover();
+	}
+
+	@Override
 	public void setVisibility(Visibility visibility) {
 		this.visibility = visibility;
 		
